# NesudoWalletAPI

./: .env.example  pyproject.toml
raziosapi/: __main__.py  config.py  enums.py  schemas.py  utils.py
raziosapi/database/: core.py  crud.py  models.py
raziosapi/routers/: __init__.py  cheques.py  invoices.py  transfers.py  wallet.py
