[tool.poetry]
name = "raziosapi"
version = "0.1.0"
description = ""
authors = ["pwxsh <pwxsh@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
fastapi = "^0.112.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
